Fixed issue with author blurb overflowing window

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -68,6 +68,7 @@ a {
 }
 .wrap {
     background-color: $color_tertiary;
+    overflow-x: hidden;
 }
 .header {
     @include box-sizing;
